--- a/app/templates/main/expense/add.html
+++ b/app/templates/main/expense/add.html
@@ -3,9 +3,11 @@
 
 {% block content %}
   <div class="ui text container">
-    <h1>About</h1>
-    <p>Something about us here...</p>
-    {# {{ page.render_inline_editor(editable_html_obj, current_user) }}#}
+    <h1>Add payment</h1>
+    <form action="/payment/add">
+      {# TODO: Show account statement where user can select particular transaction #}
+      {# TODO: Add field for transaction class #}
+    </form>
   </div>
 
   {#  <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>#}
