--- a/app/templates/account/manage.html
+++ b/app/templates/account/manage.html
@@ -22,9 +22,11 @@
 
 {% macro user_info(user) %}
     <table class="ui compact definition table">
-        <tr><td>Full name</td><td>{{ '%s %s' % (user.first_name, user.last_name) }}</td></tr>
+        <tr><td>Full name</td><td>{{ user.full_name }}</td></tr>
         <tr><td>Email address</td><td>{{ user.email }}</td></tr>
         <tr><td>Account type</td><td>{{ user.role.name }}</td></tr>
+        <tr><td>SEB token</td><td>{{ user.seb_token }}</td></tr>
+        <tr><td>Company</td><td>{{ user.company.full_name }}</td></tr>
     </table>
 {% endmacro %}
 
