--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -3,14 +3,14 @@
 #}
 
 {% macro render_menu_items(endpoints) %}
-    {% for endpoint, name, icon in endpoints %}
-        <a class="item {% if request.endpoint == endpoint %}active{% endif %}" href="{{ url_for(endpoint) }}">
-            {% if icon %}
-                <i class="{{ icon }} icon"></i>
-            {% endif %}
-            {{ name | safe }}
-        </a>
-    {% endfor %}
+  {% for endpoint, name, icon in endpoints %}
+    <a class="item {% if request.endpoint == endpoint %}active{% endif %}" href="{{ url_for(endpoint) }}">
+      {% if icon %}
+        <i class="{{ icon }} icon"></i>
+      {% endif %}
+      {{ name | safe }}
+    </a>
+  {% endfor %}
 {% endmacro %}
 
 {# This is called for all users (including anonymous users). It renders the basic left side of the 
@@ -20,51 +20,56 @@
 #}
 
 {% macro header_items(current_user) %}
-    {% set endpoints = [
-      ('main.index', config.APP_NAME, 'home'),
-      ('main.about', 'About', 'info')
-    ]%}
-    {% set user = [] %}
-    {% if current_user.is_authenticated %}
-      {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
-    {% endif %} 
-    {{ render_menu_items( endpoints +  user ) }}
+  {% set endpoints = [
+      ('main.index', config.APP_NAME, 'home')
+    ] %}
+  {# ('main.about', 'About', 'info'),#}
+
+  {% set user_items = [] %}
+  {% if current_user.is_authenticated %}
+    {% set user_items = ([
+        ('main.add_expense', 'Add expense', 'plus')
+    ]) %}
+    {# (current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]#}
+  {% endif %}
+
+  {{ render_menu_items( endpoints + user_items ) }}
 {% endmacro %}
 
 {# This renders the right hand side of the navigation bar. If the user is logged in, it links to 
    manage their account and logout (account routes). Otherwise, it links to register and login.
 #}
 {% macro account_items(current_user) %}
-    {% if current_user.is_authenticated %}
-      {% set endpoints = [
+  {% if current_user.is_authenticated %}
+    {% set endpoints = [
         ('account.manage', 'Your Account', 'settings'),
         ('account.logout', 'Log out', 'sign out')
       ] %}
-      {{ render_menu_items(endpoints) }}
-    {% else %}
-      {% set endpoints = [
+    {{ render_menu_items(endpoints) }}
+  {% else %}
+    {% set endpoints = [
         ('account.register', 'Register', 'list layout'),
         ('account.login', 'Log In', 'sign in')
       ] %}
-      {{ render_menu_items(endpoints) }}
-    {% endif %}
+    {{ render_menu_items(endpoints) }}
+  {% endif %}
 {% endmacro %}
 
 {% macro mobile_nav(current_user, dropdown=None) %}
-    <div class="mobile only row">
-        <div class="ui fixed inverted black main menu">
-            {{ header_items(current_user) }}
-            <div class="right menu">
-                <a class="icon item" id="open-nav"><i class="sidebar icon"></i></a>
-            </div>
-        </div>
-
-        {# The menu items which will be shown when open-nav is clicked #}
-        <div class="ui fixed vertical fluid menu">
-          {{ account_items(current_user) }}
-          {{ create_dropdown(dropdown) }}
-        </div>
+  <div class="mobile only row">
+    <div class="ui fixed inverted black main menu">
+      {{ header_items(current_user) }}
+      <div class="right menu">
+        <a class="icon item" id="open-nav"><i class="sidebar icon"></i></a>
+      </div>
     </div>
+
+    {# The menu items which will be shown when open-nav is clicked #}
+    <div class="ui fixed vertical fluid menu">
+      {{ account_items(current_user) }}
+      {{ create_dropdown(dropdown) }}
+    </div>
+  </div>
 {% endmacro %}
 
 {% macro create_dropdown(dropdown) %}
@@ -82,22 +87,22 @@
 {% endmacro %}
 
 {% macro desktop_nav(current_user, dropdown=None) %}
-    <div class="computer tablet only row">
-        <div class="ui fixed inverted black main menu">
-            <div class="ui container">
-                {{ header_items(current_user) }}
-                {{ create_dropdown(dropdown) }}
-                <div class="right menu">
-                    {{ account_items(current_user) }}
-                </div>
-            </div>
+  <div class="computer tablet only row">
+    <div class="ui fixed inverted black main menu">
+      <div class="ui container">
+        {{ header_items(current_user) }}
+        {{ create_dropdown(dropdown) }}
+        <div class="right menu">
+          {{ account_items(current_user) }}
         </div>
+      </div>
     </div>
+  </div>
 {% endmacro %}
 
 {% macro render_nav(current_user, dropdown=[]) %}
-    <nav class="ui navigation grid {% if endpoints %}has-submenu{% endif %}">
-        {{ mobile_nav(current_user, dropdown=dropdown) }}
-        {{ desktop_nav(current_user, dropdown=dropdown) }}
-    </nav>
+  <nav class="ui navigation grid {% if endpoints %}has-submenu{% endif %}">
+    {{ mobile_nav(current_user, dropdown=dropdown) }}
+    {{ desktop_nav(current_user, dropdown=dropdown) }}
+  </nav>
 {% endmacro %}
