--- a/app/templates/main/expense/add.html
+++ b/app/templates/main/expense/add.html
@@ -7,6 +7,11 @@
     <form action="/payment/add">
       {# TODO: Show account statement where user can select particular transaction #}
       {# TODO: Add field for transaction class #}
+
+      {% for transaction in transactions %}
+        {{ transaction }}<br>
+{#        [{'': 11, 'transactionAmount': 11, 'transactionCurrency': 'EUR', 'bookdate': '2018-02-17', 'creditOrDebit': 'debit', 'structuredReference': None, 'unstructuredReference': 'test payment', 'counterPartyAccount': 'EE581010010607110014', 'counterPartyName': 'Test user', 'counterPartyLegalId': None, 'instructionId': None, 'entToEndId': 'xxxxxxxxxxxxMxxxNxxxxxxxxxxxxxxx'}, {'accountAmount': 11, 'transaction#}
+      {% endfor %}
     </form>
   </div>
 
