sending a confirmed expense to the database

--- a/app/templates/main/expense/confirm.html
+++ b/app/templates/main/expense/confirm.html
@@ -23,14 +23,14 @@
         <label>Reciever</label>
         <input readonly name="reciever" type="text" value="SEB Eesti AS"/>
         <label>Amount</label>
-        <input readonly name="amount" type="text" value="13€"/>
+        <input readonly name="amount" type="number" value="13"/>
         <label>Date</label>
         <input readonly name="paymentDate" type="date" value="2018-04-20"/>
         <label>Expense type</label>
-        <input type="radio" name="expenseType" value="Food" />
-        <input type="radio" name="expenseType" value="Transport" />
-        <input type="radio" name="expenseType" value="Guest" />
-        <input type="radio" name="expenseType" value="Other" />
+        <input type="radio" name="expenseType" value="1" />
+        <input type="radio" name="expenseType" value="2" />
+        <input type="radio" name="expenseType" value="3" />
+        <input type="radio" name="expenseType" value="4" />
         <label>Description</label>
         <input type="text" name="description" />
         <button type="submit">Submit answer</button>
