images for radio buttons

--- a/app/templates/main/expense/add.html
+++ b/app/templates/main/expense/add.html
@@ -50,25 +50,25 @@
         <div class="field">
           <div class="ui radio checkbox">
             <input type="radio" name="expense_type" value="transport" checked="checked" id="transport">
-            <label for="transport">Transport</label>
+            <label for="transport"><img src="../../static/label_images/transport.png" ></label>
           </div>
         </div>
         <div class="field">
           <div class="ui radio checkbox">
             <input type="radio" name="expense_type" value="meal" id="meal">
-            <label for="meal">Meals</label>
+            <label for="meal"><img src="../../static/label_images/meals.png" ></label>
           </div>
         </div>
         <div class="field">
           <div class="ui radio checkbox">
             <input type="radio" name="expense_type" value="accommodation" id="accommodation">
-            <label for="accommodation">Accommodation</label>
+            <label for="accommodation"><img src="../../static/label_images/accommodation.png" ></label>
           </div>
         </div>
         <div class="field">
           <div class="ui radio checkbox">
             <input type="radio" name="expense_type" value="corporate" id="corporate">
-            <label for="corporate">Corporate</label>
+            <label for="corporate"><img src="../../static/label_images/corporate.png" ></label>
           </div>
         </div>
       </div>
