Bug fixes, update readme, add screen shoots, refactoring

--- a/app/templates/account/manage.html
+++ b/app/templates/account/manage.html
@@ -40,7 +40,7 @@
     </tr>
     <tr>
       <td>SEB token</td>
-      <td>{{ user.seb_token }}</td>
+      <td style="word-break: break-all;">{{ user.seb_token }}</td>
     </tr>
     {% if user.is_user() %}
       <tr>
