--- a/app/templates/main/request/all.html
+++ b/app/templates/main/request/all.html
@@ -66,7 +66,7 @@
         <th>Is Approved</th>
         <th>Is Paid</th>
         <th>Created By</th>
-        <th>Actions</th>
+        {# <th>Actions</th>#}
       </tr>
       </thead>
       <tbody>
@@ -90,7 +90,7 @@
             {{ ('<i class="star green icon"></i>' if expense.is_paid else '<i class="star half empty red icon"></i>') | safe }}
           </td>
           <td>{{ expense.user.full_name }}</td>
-          <td class="center aligned">
+          {#<td class="center aligned">
             {% if not expense.is_rejected %}
               <form action="{{ url_for('main.reject_expense', expense_id=expense.id) }}" method="POST"
                     style="display: inline-block">
@@ -106,17 +106,17 @@
                 <button type="submit" class="ui button green tiny">Accept</button>
               </form>
             {% endif %}
-          </td>
+          </td>#}
         </tr>
       {% else %}
         <tr class="">
-          <td colspan="9" class="center aligned">No records founds...</td>
+          <td colspan="8" class="center aligned">No records founds...</td>
         </tr>
       {% endfor %}
       </tbody>
       <tfoot>
       <tr>
-        <th colspan="9">
+        <th colspan="8">
           <div class="ui right floated pagination menu">
             <a class="icon item">
               <i class="left chevron icon"></i>
